# newlifer-competition

./: README.markdown  newlifer-competition.cabal  newlifer-competition.hs
src/: Version1.hs  Version2.hs  Version3.hs  Version4.hs  newlifer-competition.hs
